# wasmc

./: Cargo.toml  README.md
.github/workflows/: main.yml  release.yml
src/: main.rs  options.rs
tests/: macros.rs  main.rs  util.rs
tests/testdata/: add.wat
